--- a/index.html
+++ b/index.html
@@ -1,11 +1,321 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Página de prueba<title>
-</head>
-<body>
-  <h1>Hola amiguitos!</h1>
-  <footer>gpuma 2017</footer>
-</body>
-</html>
+<!-- saved from url=(0018)http://kodops.com/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="./Kodops_files/bootstrap.min.css">
+    <link rel="stylesheet" href="./Kodops_files/main.css">
+    <link href="./Kodops_files/css" rel="stylesheet">
+    <link href="./Kodops_files/css(1)" rel="stylesheet">
+    <link href="./Kodops_files/css(2)" rel="stylesheet">
+    <title>Kodops</title>
+<style></style></head>
+
+<body class="page home-page">
+    <div class="wrapper">
+        <header class="main">
+            <div class="container">
+                <section class="content">
+                    <div class="logo">
+                        <img src="./Kodops_files/kodops-logo.png">
+                        <a class="hamburger-menu-button open-menu" href="javascript:;">
+                            <img src="./Kodops_files/hamburger.png">
+                        </a>
+                        <a href="javascript:;" class="hamburger-menu-button close-menu">
+                            <img src="./Kodops_files/close-button.png">
+                        </a>
+                    </div>
+                    <div class="links">
+                        <div class="link first-link">
+                            <a href="javascript:;" data-rel="working-content">How It Works</a>
+                        </div>
+                        <div class="link second-link">
+                            <a href="javascript:;" data-rel="reference-content">References</a>
+                        </div>
+                        <div class="link third-link">
+                            <a href="javascript:;" data-rel="get-in-touch">Contact</a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="menu-popup">
+                <ul>
+                    <li><a href="javascript:;" data-rel="working-content">HOW IT WORKS</a></li>
+                    <li><a href="javascript:;" data-rel="reference-content">REFERENCES</a></li>
+                    <li><a href="javascript:;" data-rel="get-in-touch">CONTACT</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <main>
+            <section>
+                <div class="container-fluid noPadding">
+                    <div class="content">
+                        <div class="image-content">
+                            <div class="text-area">
+                                <!--<span>DO YOU HAVE AN EXCITING BUSINESS IDEA?</span>-->
+                                <h1>WE BRING SOLUTIONS <br>TO YOUR LIFE</h1>
+                                <!--<a href="javascript:;" class="scrollA" data-rel="get-in-touch">Get in Touch Now</a>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--<section>
+                <div class="container">
+                    <div class="content">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="description">
+                                    <p>LET US BUILD, TEST & OPTIMIZE YOUR WEBSITE. SAVE TIME, MONET AND EQUITY WHILE GETTING
+                                        FIRST CUSTOMERS ON BOARD AND TURNING YOUR IDEA INTO A PROFITABLE BUSINESS</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="row">
+                                    <div class="col-12 image-area">
+                                        <img src="assets/images/line-elements-03.png" />
+                                    </div>
+                                    <div class="col-12 meta">
+                                        <span>SAFE</span>
+                                        <p>We ensure protection of your ideas with NDAs</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="row">
+                                    <div class="col-12 image-area">
+                                        <img src="assets/images/line-elements-52.png" />
+                                    </div>
+                                    <div class="col-12 meta">
+                                        <span>AGILE</span>
+                                        <p>We use agile development methodology to quickly deliver and optimize your page</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="row">
+                                    <div class="col-12 image-area">
+                                        <img src="assets/images/line-elements-48.png" />
+                                    </div>
+                                    <div class="col-12 meta">
+                                        <span>LEAN</span>
+                                        <p>We test and change your product with your target customers at every stage to minimize
+                                            costs
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>-->
+            <!--<section>
+                <div class="container-fluid noPadding">
+                    <div class="content">
+                        <div class="image-content image-content-second">
+                            
+                            <div class="text-area">
+                                <span>WE CAN HELP YOU MOVE FORWARD WITH YOUR BUSINESS</span>
+                                <a href="javascript:;" class="scrollA" data-rel="get-in-touch">Get in Touch Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>-->
+            <!--border-->
+            <!--<section>
+                <div class="container-fuluid noPadding">
+                    <span class="border"></span>
+                </div>
+            </section>-->
+            <section>
+                <div class="container">
+                    <div class="working-content">
+                        <div class="title">
+                            <span>HOW IT WORKS</span>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 working-content-item">
+                                <div class="row">
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="image">
+                                            <img src="./Kodops_files/kodops-1.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="meta">
+                                            <span>Software Solutions</span>
+                                            <p>We create solutions to your needs. Just tell us your ideas and we will create
+                                                the rest!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 d-block d-md-none d-lg-none working-content-item">
+                                <div class="row">
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="image">
+                                            <img src="./Kodops_files/kodops-4.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="meta">
+                                            <span>DevOps Consultancy</span>
+                                            <p>We can manage all your software life cycle for you. You don't ever have to worry
+                                                about your CI/CD again.</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-12 d-none d-md-block d-lg-block working-content-item">
+                                <div class="row">
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="meta type-2">
+                                            <span>DevOps Consultancy</span>
+                                            <p>We can manage all your software life cycle for you. You don't ever have to worry
+                                                about your CI/CD again.</p>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="image">
+                                            <img src="./Kodops_files/kodops-4.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 working-content-item">
+                                <div class="row">
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="image">
+                                            <img src="./Kodops_files/kodops-3.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-lg-6">
+                                        <div class="meta">
+                                            <span>Agile Development</span>
+                                            <p>All our software developments and consultancy processes are managed within agile
+                                                principles. </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--<section>
+                <div class="container-fuluid noPadding">
+                    <span class="border"></span>
+                </div>
+            </section>-->
+            <section>
+                <div class="container">
+                    <div class="reference-content">
+                        <div class="title">
+                            <span>REFERENCES</span>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="image-content">
+                                    <div class="image">
+                                        <img src="./Kodops_files/turkcell.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="image-content">
+                                    <div class="image">
+                                        <img src="./Kodops_files/turkcell-global.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-4 image-container">
+                                <div class="image-content">
+                                    <div class="image">
+                                        <img src="./Kodops_files/rdc-partner.png">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container-fuluid noPadding">
+                    <span class="border"></span>
+                </div>
+            </section>
+        </main>
+        <footer class="main get-in-touch">
+
+            <div class="container-fluid noPadding">
+                <div class="block-content type-2">
+                    <div class="container">
+                        <div class="text-content">
+                            <div class="text-area">
+                                <span>CONTACT US</span>
+                                <p>Our team would love to help you move forward with your business idea, a meeting shall be
+                                    scheduled to assess your needs.</p>
+                            </div>
+                            <div class="form-content">
+                                <form>
+                                    <div class="form-area">
+                                        <div class="form-item">
+                                            <div class="text"><span>Name</span></div>
+                                            <div class="text-item">
+                                                <input type="text">
+                                            </div>
+                                            <div class="text"><span>E-mail</span></div>
+                                            <div class="text-item">
+                                                <input type="text">
+                                            </div>                                            
+                                            <div class="button">
+                                                <input type="button" value="SEND">
+                                            </div>
+                                            <div class="message">
+                                                <p>SUCCESS!</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <!--<div class="social-media-content">
+                    <div class="social-media-items">
+                        <div class="social-media-item facebook">
+                            <a href="javascript:;">
+                                <img src="assets/images/facebook-ico.png"/>
+                            </a>
+                        </div>
+                        <div class="social-media-item twitter">
+                            <a href="javascript:;">
+                                <img src="assets/images/twitter-ico.png"/>
+                            </a>
+                        </div>
+                        <div class="social-media-item linkedin">
+                            <a href="javascript:;">
+                                <img src="assets/images/linkedin-ico.png"/>
+                            </a>
+                        </div>
+                    </div>
+                </div>-->
+                <div class="static">Kodops © 2018</div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="./Kodops_files/jquery-3.1.1.min.js"></script>
+    <script src="./Kodops_files/jquery-ui.js"></script>
+    <script src="./Kodops_files/bootstrap.min.js"></script>
+    <script src="./Kodops_files/main.js"></script>
+
+
+
+</body></html>
